--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@types/vue-grid-layout-v3",
+  "name": "vue-grid-layout-v3-types",
   "version": "1.0.0",
   "description": "Type definitions for vue-grid-layout-v3",
   "main": "",
@@ -10,7 +10,6 @@
   },
   "keywords": [
     "vue-grid-layout-v3",
-    "@types/vue-grid-layout-v3",
     "typescript",
     "types"
   ],
