--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/moxymaya"
+    "url": "https://github.com/moxymaya/vue-grid-layout-v3-types"
   },
   "keywords": [
     "vue-grid-layout-v3",
